[package]
name = "hilbert-image-obfuscator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33.3"
image = "0.25.9"
rfd = "0.17.2"
hilbert_2d = "1.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef"] }
